--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">August 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/copy-content-from-another-course">Copy content from another course</a>
+      </h3>
+      <p>
+        Design for copying form values from one course to another
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/terms-agreement">Terms agreement</a>
       </h3>
       <p>
