--- a/app/views/history/copy-content-from-another-course/index.html
+++ b/app/views/history/copy-content-from-another-course/index.html
@@ -12,7 +12,52 @@
   </div>
   <h1 class="heading-xlarge">{{ title }}</h1>
 
+  <div class="grid-row">
+    <div class="column-two-thirds">
+      <h2 class="heading-large">We tried templates</h2>
+      <p>From our investigation into <a href="/history/templates">sharing content using templates</a>:</p>
+      <blockquote class="panel panel-border-wide">
+        <p>For many training providers there is great similarity between the courses they offer for different subjects. Users need an easy way to share information between these courses so they don't have to copy and paste content between them. Users also need to easily update all courses that share information, so that they all remain consistent, again without needing to copy and paste.</p>
+
+        <p>We’ve observed in user research that without the ability to share information users are likely to use copy and paste.</p>
+      </blockquote>
+
+      <p>Findings from templates research revealed that templates were largely well understood but that users also wanted to apply a template and then tweak it, to alter the small details that do differ.</p>
+
+      <p><a href="https://dfedigital.atlassian.net/browse/BATSA-459">We considered iterating templates</a> to better handle content tweaks. The biggest benefit of templates is to have them available when providers are writing course content for the first time. We found that we wouldn’t have enough time to build a templating system before September.</p>
+
+      <p>We needed an alternative to templates, one that would alleviate the pain of copying and pasting without depending on backend development too heavily – which is our current bottleneck. (<a href="https://trello.com/c/cm9Y7cx9/120-design-improvements-over-copying-and-pasting-between-fields">Trello</a>)</p>
+
+      <p>In <a href="https://lookback.io/watch/kY9HWu5MJiJhgJ5yC">user research</a> this need continues to surface:</p>
+
+      <ul class="list list-bullet">
+        <li><a href="https://lookback.io/watch/kY9HWu5MJiJhgJ5yC?t=11m31s">“It’s quite repetitive”</a></li>
+        <li><a href="https://lookback.io/watch/kY9HWu5MJiJhgJ5yC?t=13m34s">“Is it going to be able to copy information from one course to another?”</a></li>
+        <li><a href="https://lookback.io/watch/kY9HWu5MJiJhgJ5yC?t=22m20s">“There isn’t a mechanism to duplicate the information”</a></li>
+      </ul>
+
+      <h2 class="heading-large">Copying fields from another course</h2>
+
+      <p>This design makes it possible to fill in the values of a course based on another course that’s already been completed.</p>
+
+      <p>It is largely frontend and JavaScript based and is an enhancement for those with JavaScript over the baseline form. It’s expected that the content to copy will be easily retrievable. Building the list of courses that can be copied and making the content retrievable are the main backend features to build.</p>
+
+      <p>The list of courses to copy from should match the order on the courses tab. They should be grouped by accrediting provider using an <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/optgroup">"optgroup" element</a>.</p>
+
+      <p>There is still some repetition for users – they need to go into each course page and choose what to copy.</p>
+
+      <p>Users may not want to copy all the fields, if this is the case we can iterate the feature to allow selection of what gets copied. They can’t simply copy a course wholesale. However the point at which content is copied makes it easy to tweak the content before saving.</p>
+
+      <h2 class="heading-large">Warn before overwriting</h2>
+
+      <p>If the form already contains content, when they attempt to copy content a JavaScript confirmation dialogue should warn them that their content will be overwritten and ask them if they want to proceed.</p>
+
+      <p>This part of the design hasn’t been built in the prototype.</p>
+    </div>
+  </div>
+
   {% set contents = [
+    { text: 'Animation showing content copying', id: 'animation' },
     { text: 'Use this content again', id: 'use-this-content-again' },
     { text: 'Use content from another course', id: 'use-content-from-another-course' },
     { text: 'Content copied from another course', id: 'content-copied-from-another-course' },
@@ -20,9 +65,20 @@
   ] %}
   {{ macros.screenshotContents(contents) }}
 
-  {{ macros.screenshot('Use this content again', 'use-this-content-again', '/public/images/history/better-than-copy-paste/thumbnails/01-use-this-content-again.png', '/public/images/history/better-than-copy-paste/01-use-this-content-again.png', '') }}
+  {{ macros.screenshot('Animation showing content copying', 'animation', '/public/images/history/better-than-copy-paste/copy-content-demo.gif', '/public/images/history/better-than-copy-paste/copy-content-demo.gif', '
+  ') }}
 
-  {{ macros.screenshot('Use content from another course', 'use-content-from-another-course', '/public/images/history/better-than-copy-paste/thumbnails/01-use-content-from-another-course.png', '/public/images/history/better-than-copy-paste/01-use-content-from-another-course.png', '') }}
+  {{ macros.screenshot('Use this content again', 'use-this-content-again', '/public/images/history/better-than-copy-paste/thumbnails/01-use-this-content-again.png', '/public/images/history/better-than-copy-paste/01-use-this-content-again.png', '
+    <p>When no course has been completed yet, we prompt as a heads up that this feature is there but not yet usable.</p>
+  ') }}
+
+  {{ macros.screenshot('Use content from another course', 'use-content-from-another-course', '/public/images/history/better-than-copy-paste/thumbnails/01-use-content-from-another-course.png', '/public/images/history/better-than-copy-paste/01-use-content-from-another-course.png', '
+    <p>The form shows once a couse has been completed.</p>
+
+    <p>The select dropdown lists only courses that have been completed.</p>
+
+    <p>On submit it copies all the content from that course into the form fields on the page. They are not persisted until the user saves. Feedback displays which fields were copied, an error shows if nothing is copied.</p>
+  ') }}
 
   {{ macros.screenshot('Content copied from another course', 'content-copied-from-another-course', '/public/images/history/better-than-copy-paste/thumbnails/01-content-copied-from-another-course.png', '/public/images/history/better-than-copy-paste/01-content-copied-from-another-course.png', '') }}
 
