Move paragraphs around

--- a/app/views/history/copy-content-from-another-course/index.html
+++ b/app/views/history/copy-content-from-another-course/index.html
@@ -44,9 +44,9 @@
 
       <p>The list of courses to copy from should match the order on the courses tab. They should be grouped by accrediting provider using an <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/optgroup">"optgroup" element</a>.</p>
 
-      <p>There is still some repetition for users – they need to go into each course page and choose what to copy.</p>
+      <p>There is still some repetition for users – they need to go into each course page and choose what to copy. They can’t simply copy a course wholesale. However the point at which content is copied makes it easy to tweak the content before saving.</p>
 
-      <p>Users may not want to copy all the fields, if this is the case we can iterate the feature to allow selection of what gets copied. They can’t simply copy a course wholesale. However the point at which content is copied makes it easy to tweak the content before saving.</p>
+      <p>Users may not want to copy all the fields, if this is the case we can iterate the feature to allow selection of what gets copied.</p>
 
       <h2 class="heading-large">Warn before overwriting</h2>
 
