--- a/app/views/history/copy-content-from-another-course/index.html
+++ b/app/views/history/copy-content-from-another-course/index.html
@@ -73,7 +73,7 @@
   ') }}
 
   {{ macros.screenshot('Use content from another course', 'use-content-from-another-course', '/public/images/history/better-than-copy-paste/thumbnails/01-use-content-from-another-course.png', '/public/images/history/better-than-copy-paste/01-use-content-from-another-course.png', '
-    <p>The form shows once a couse has been completed.</p>
+    <p>The form shows once another course has some of those fields.</p>
 
     <p>The select dropdown lists only courses that have been completed.</p>
 
