--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -71,12 +71,13 @@
 <div class="add-double-bottom-margin status-box">
   {% if state == 'draft' %}
     <div class="unpublished-changes">
-      <p>You have unpublished changes.</p>
+      <p><span class="bold">You have unpublished changes.</span></p>
+      <p class="who-saved add-top-margin">Last updated:<br />{{ today() }} by Jane Doe</p>
     </div>
   {% endif %}
 
   {% if publishedBefore or state == 'published' %}
-    <p>Last published on {{ today() }}</p>
+    <p>Last published:<br />{{ today() }} by Rita Cosca</p>
     <hr />
   {% endif %}
 
