--- a/app/views/course/requirements.html
+++ b/app/views/course/requirements.html
@@ -9,6 +9,7 @@
   <a href="/course/{{ accrediting.slug }}/{{ course.programmeCode }}" class="link-back">Back</a>
 
   <h1 class="heading-xlarge">
+    <span class="heading-secondary">{{ course.name | safe }} ({{ course.programmeCode }})</span>
     {{ title }}
   </h1>
 
