Update accept terms copy

--- a/app/views/accept-terms.html
+++ b/app/views/accept-terms.html
@@ -16,10 +16,11 @@
 
       <p>We need you to read and agree to our terms and conditions.</p>
 
-      <p>In summary:</p>
+      <p>These set out your responsibilities when publishing content to Publish teacher training courses. This includes making sure your content:</p>
       <ul class="list list-bullet">
-        <li>something</li>
-        <li>something else</li>
+        <li>is relevant to the service and accurate</li>
+        <li>is not offensive, inappropriate or discriminatory</li>
+        <li>belongs to you</li>
       </ul>
 
       <p>
