--- a/app/views/history/terms-agreement/index.html
+++ b/app/views/history/terms-agreement/index.html
@@ -21,6 +21,10 @@
 
       <p>While a user hasn’t agree to the terms, the only pages they can access are this one, terms and conditions, privacy policy and cookies (ie the footer links). Access to any other valid URL should redirect them back to here.</p>
 
+      <p>
+        <a href="/accept-terms">View design in prototype</a>
+      </p>
+
       <a href="https://trello.com/c/fnReQwNM/121-dont-allow-publishing-until-a-publisher-has-accepted-terms-and-conditions">Story map</a>, <a href="https://trello.com/c/QVVSINV5/135-design-terms-and-conditions-acceptance-flow-when-a-user-signs-in-to-publish-courses">Trello ticket</a>
     </div>
   </div>
