--- a/app/views/history/needs-behind-fields.html
+++ b/app/views/history/needs-behind-fields.html
@@ -14,39 +14,98 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
+      <p>Courses are divided across 3 parts to make them easier to complete:</p>
+      <ul class="list list-bullet">
+        <li>About this course</li>
+        <li>Course length, fees and salary</li>
+        <li>Requirements</li>
+      </ul>
+
+      <p>This information is combined with details about the training provider which is shared across all of their courses.</p>
+
       <h2 class="heading-large">About this course</h2>
 
       <h3 class="heading-medium">About this course</h3>
 
+      <p>Applicants need a sense of what the course entails; course structure, study locations, course prestige, what distinguishes this course from others like it.</p>
+
+      <p>This is a large and relatively open field to give providers an opportunity to describe their course, with guidance suggesting things they should include.</p>
+
       <h3 class="heading-medium">Interview process (optional)</h3>
 
+      <p>Applicants need to know what to expect should they reach the interview process.</p>
+
+      <p>Providers tell us that describing their interview process can discourage people from applying. <a href="https://lookback.io/watch/Psi3panxQDwkrXuwj?t=27m39s">Research with applicants</a> shows that the interview process can be a differentiator.</p>
+
+      <p>There’s an open question: Is it better for users to know about the interview process, but risk getting fewer applications or is it better to omit interview details until after an application is made and hope more people apply? By making this field optional we give this choice to providers.</p>
+
       <h3 class="heading-medium">How school placements work</h3>
+
+      <p>Students will spend some of their time in placement schools. The variety of schools, the time spent in those schools, and when during the year they'll be at their placements varies between courses.</p>
+
+      <p>Applicants need to know how their placements will work, and what type of placement options are available to them should they choose that course.</p>
 
       <h2 class="heading-large">Course length, fees and salary</h2>
 
       <h3 class="heading-medium">Fees for UK and EU students</h3>
 
+      <p>Applicants in the UK need to know how much a course costs.</p>
+
       <h3 class="heading-medium">Fees for international students (optional)</h3>
+
+      <p>Fees for international students are larger, applicants from outside the EU need to know how much a course costs. Not all courses are available to international students.</p>
 
       <h3 class="heading-medium">Fee details (optional)</h3>
 
+      <p>Sometimes fees are more complex than a single amount to pay. For example, providers offering a QTS only course might offer a PGCE top-up which has an additional cost.</p>
+
+      <p>Applicants need to know what their options are regarding fees.</p>
+
       <h3 class="heading-medium">Financial support you offer (optional)</h3>
+
+      <p>We already provide details of DfE bursaries and subject scholarships but some providers <a href="https://lookback.io/watch/CCdNXjjh34amgbWzK?t=13m55.3s-22m25s">offer their own bursaries</a>. Providers can use this field to describe their bursaries. Applicants need to know if a provider can give additional financial support.</p>
+
+      <h3 class="heading-medium">Salary</h3>
+
+      <p>Applicants need to know what salary they’ll get if they choose a salaried course. Training providers can’t give this figure – it’s usually based on a national scale that’s not agreed until January. This field allows providers to give context about the salary without having a figure at hand.</p>
+
+      <p>Applicants need to know when there are no fees to pay. When taking a salaried course there are usually (but not always) no fees to pay. We prompt providers to either explain their additional fees (eg top-ups) or be explicit when there are no fees.</p>
 
       <h2 class="heading-large">Requirements</h2>
 
       <h3 class="heading-medium">Qualifications needed</h3>
 
+      <p>Courses often require qualifications higher than the national minimum (eg they might need a 2:1 degree, or As in certain subjects at A level). Applicants need to know if they have the required qualifications before applying.</p>
+
       <h3 class="heading-medium">Personal qualities (optional)</h3>
 
+      <p>A place for training providers to indicate the qualities or soft skills an applicant will need.</p>
+
       <h3 class="heading-medium">Other requirements (optional)</h3>
+
+      <p>Applicants need to meet other requirements such as a DBS check and a numeracy and literacy test. Providers can use this field as a catch-all for any requirements that are not described by the previous fields.</p>
+
+      <p><a href="https://www.gov.uk/government/publications/initial-teacher-training-criteria/initial-teacher-training-itt-criteria-and-supporting-advice#c13-suitability">School experience cannot be used as a requirement</a>. Experience with school aged children will still be used to differentiate applications. Providers can use this field to talk about school experience.</p>
 
       <h2 class="heading-large">About your organisation</h2>
 
       <h3 class="heading-medium">Training with you</h3>
 
+      <p>Training providers need to differentiate themselves. This is where they can include the unique benefits of choosing them, eg “the Times Educational Supplement ranked our students as 4th happiest in the country”.</p>
+
+      <p>Information about a provider will help applicants to differentiate courses when their location and financial needs are otherwise met.</p>
+
       <h3 class="heading-medium">About your accrediting provider (optional)</h3>
 
+      <p>Or the QTS awarding body. Training providers have different relationships with their accrediting providers. They can have 0, 1 or many accrediting providers.</p>
+
+      <p>Like the training provider, the accrediting provider can be a differentiator. Some applicants will choose a course based on the prestige of the organisation awarding the qualification.</p>
+
+      <p>If a training provider offers the same course through different accrediting providers, applicants need to be able to choose between them.</p>
+
       <h3 class="heading-medium">Training with a disability</h3>
+
+      <p>Applicants with access needs need to know how a provider can accommodate those needs. We prompt providers to consider the range of needs and to give examples of how they’ve helped students in the past.</p>
     </div>
   </div>
 </main>
