Add note about "accrediting provider"

--- a/app/views/history/needs-behind-fields.html
+++ b/app/views/history/needs-behind-fields.html
@@ -101,6 +101,8 @@
 
       <p>Like the training provider, the accrediting provider can be a differentiator. Some applicants will choose a course based on the prestige of the organisation awarding the qualification.</p>
 
+      <p>The term ‘accrediting provider’ is contentious - the department and training providers have different views on which term is appropriate.</p>
+
       <p>If a training provider offers the same course through different accrediting providers, applicants need to be able to choose between them.</p>
 
       <h3 class="heading-medium">Training with a disability</h3>
