--- a/app/views/history/publish-changes/iteration-aug-15.html
+++ b/app/views/history/publish-changes/iteration-aug-15.html
@@ -15,6 +15,7 @@
     <div class="column-two-thirds">
       <p>An iteration on <a href="/history/publish-changes">the original</a> that highlights the ‘unpublished changes’ aspect of the publish sidebar.</p>
       <p>It needs to be more obvious when there’s something that needs publishing.</p>
+      <p>We also <a href="/history/who-did-what-when">added a user and timestamp</a>.</p>
     </div>
   </div>
 
