--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -72,7 +72,7 @@
   {% if state == 'draft' %}
     <div class="unpublished-changes">
       <p><span class="bold">You have unpublished changes.</span></p>
-      <p class="who-saved add-top-margin">Last updated:<br />{{ today() }} by Jane Doe</p>
+      <p class="who-saved add-top-margin">Last saved:<br />{{ today() }} by Jane Doe</p>
     </div>
   {% endif %}
 
@@ -112,11 +112,12 @@
   {% if state == 'draft' %}
     <div class="unpublished-changes">
       <p>You have unpublished changes.</p>
+      <p class="who-saved add-top-margin">Last saved:<br />{{ today() }} by Jane Doe</p>
     </div>
   {% endif %}
 
   {% if publishedBefore or state == 'published' %}
-    <p>Last published on {{ today() }}</p>
+    <p>Last published:<br />{{ today() }} by Rita Cosca</p>
     <hr />
   {% endif %}
 
