Fix broken link in preview

--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -100,8 +100,8 @@
             <li><a href="#section-fees">Fees</a></li>
           {% endif %}
           <li><a href="#section-financial-support">Financial support</a></li>
-          <li><a href="#section-about">About the training provider</a></li>
-          <li><a href="#section-contact">Contact details</a></li>
+          <li><a href="#section-about-provider">About the training provider</a></li>
+          <li><a href="#section-provider">Contact details</a></li>
           <li><a href="#section-apply">Apply</a></li>
         </ul>
 
