Fix bug with salary not showing in preview

--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -133,7 +133,7 @@
 
         {% if course.salaried %}
           <h2 class="heading-medium" id="section-salary">Salary</h2>
-          {{ macros.previewPart(prefix + '-salary') }}
+          {{ macros.previewPart(prefix + '-salary-details') }}
         {% else %}
           <h2 class="heading-medium" id="section-fees">Fees</h2>
           <p>The course fees for 2018/2019 are as follows:</p>
