--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -136,31 +136,36 @@
           {{ macros.previewPart(prefix + '-salary-details') }}
         {% else %}
           <h2 class="heading-medium" id="section-fees">Fees</h2>
-          <p>The course fees for 2018/2019 are as follows:</p>
-          <div class="body-text">
-            <table>
-              <tbody>
-                <tr class="visually-hidden">
-                  <th>Student type</th>
-                  <th>Fees to pay</th>
-                </tr>
-                <tr>
-                  <td>UK students</td>
-                  <td>£{{ data[prefix + '-fee'] }}</td>
-                </tr>
-                <tr>
-                  <td>EU students</td>
-                  <td>£{{ data[prefix + '-fee'] }}</td>
-                </tr>
-                {% if data[prefix + '-fee-international'] %}
-                <tr>
-                  <td>International students</td>
-                  <td>£{{ data[prefix + '-fee-international'] }}</td>
-                </tr>
-                {% endif %}
-              </tbody>
-            </table>
-          </div>
+
+          {% if not data[prefix + '-fee'] %}
+            {{ macros.previewPart(prefix + '-fee') }}
+          {% else %}
+            <p>The course fees for 2018/2019 are as follows:</p>
+            <div class="body-text">
+              <table>
+                <tbody>
+                  <tr class="visually-hidden">
+                    <th>Student type</th>
+                    <th>Fees to pay</th>
+                  </tr>
+                  <tr>
+                    <td>UK students</td>
+                    <td>£{{ data[prefix + '-fee'] }}</td>
+                  </tr>
+                  <tr>
+                    <td>EU students</td>
+                    <td>£{{ data[prefix + '-fee'] }}</td>
+                  </tr>
+                  {% if data[prefix + '-fee-international'] %}
+                  <tr>
+                    <td>International students</td>
+                    <td>£{{ data[prefix + '-fee-international'] }}</td>
+                  </tr>
+                  {% endif %}
+                </tbody>
+              </table>
+            </div>
+          {% endif %}
 
           {% if data[prefix + '-fee-details'] %}
             {{ macros.previewPart(prefix + '-fee-details') }}
@@ -168,7 +173,13 @@
         {% endif %}
 
         <h2 class="heading-medium" id="section-financial-support">Financial support</h3>
-        <p>Not available in this prototype.</p>
+        <p>You may be eligible for <a href="https://www.gov.uk/teacher-training-funding">financial support while you study, including bursaries, scholarships and loans</a>.</p>
+        <p><a href="https://getintoteaching.education.gov.uk/explore-my-options/overseas-graduates">Financial support if you’re from outside of the UK</a>.</p>
+
+        {% if data[prefix + '-financial-support'] %}
+          <h3 class="heading-small">Financial support from the training provider</h3>
+          {{ macros.previewPart(prefix + '-financial-support') }}
+        {% endif %}
 
         <h2 class="heading-medium" id="section-about-provider">About the training provider</h2>
         {{ macros.previewPart('about-organisation', true) }}
