--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -47,12 +47,10 @@
                       Running
                     {% endif %} --></td>
                 <td>
-                  {% if loop.index == 2 %}
+                  {% if data[course.programmeCode + '-publish-state'] == 'draft' %}
+                    <span class="phase-tag phase-tag-small phase-tag-draft">Draft</span>
+                  {% elseif data[course.programmeCode + '-publish-state'] == 'published' %}
                     <span class="phase-tag phase-tag-small phase-tag-published">Published</span>
-                  {% elseif loop.index == 7 %}
-                    <span class="phase-tag phase-tag-small phase-tag-draft">Draft</span>
-                  {% elseif loop.index == 4 %}
-                    <span class="phase-tag phase-tag-small phase-tag-draft">Draft</span>
                   {% else %}
                     <span class="phase-tag phase-tag-small phase-tag-no-content">Empty</span>
                   {% endif %}
