--- a/app/views/about-your-organisation.html
+++ b/app/views/about-your-organisation.html
@@ -50,6 +50,8 @@
   <form action="/about-your-organisation" method="post">
     <div class="grid-row">
       <div class="column-two-thirds">
+        <p>This information shows on all of your courses.</p>
+
         <p>This is your chance to tell applicants why they should choose to train with you. You could describe any advantages and special features of you as a training provider.</p>
 
         <p>You must be specific and factual with any claims you make, and support them with evidence. For example:</p>
@@ -90,10 +92,17 @@
 
     <div class="grid-row">
       <div class="column-two-thirds">
-        <h3 class="heading-large remove-top-margin">Training with a disability</h3>
-        <p>Here you should summarise the accessibility of your course. Bear in mind the range of disabilities that applicants may have (eg dyslexia, or physical, hearing and visual impairments). If accessibility varies between schools or other sites, give details. You could also offer examples of how you’ve accommodated candidates with particular accessibility needs.</p>
+        <h3 class="heading-large remove-top-margin">Training with disabilities and other needs</h3>
+        <p>Say how you support candidates with disabilities and other needs. This could include candidates with:</p>
 
-        {{ macros.textarea('training-with-a-disability', 'Training with a disability', 14, '', 250, errors) }}
+        <ul class="list list-bullet">
+          <li>dyslexia</li>
+          <li>physical, hearing and visual impairments</li>
+          <li>mental health conditions</li>
+        </ul>
+        <p>If accessibility varies between locations, give details. It’s also useful to candidates to know how you’ve accommodated others with specific access needs in the past.</p>
+
+        {{ macros.textarea('training-with-a-disability', 'Training with disabilities and other needs', 14, '', 250, errors) }}
       </div>
     </div>
 
