--- a/app/views/course-not-running.html
+++ b/app/views/course-not-running.html
@@ -26,7 +26,7 @@
 
   <div class="not-running-notice add-double-bottom-margin">
     <h2 class="heading-large remove-top-margin">This course is not running</h2>
-    <p class="lede remove-bottom-margin">It won’t appear online. To publish it you need to set the status of at least one training location to “running” in <a href="https://update.ucas.co.uk/cgi-bin/hsrun.hse/NetUpdate/netupdate2/netupdate2.hjx;start=netupdate2.HsLoginPage.run">UCAS Web-link</a>”.</p>
+    <p class="lede remove-bottom-margin">It won’t appear online. To publish it you need to set the status of at least one training location to “running” in <a href="https://update.ucas.co.uk/cgi-bin/hsrun.hse/NetUpdate/netupdate2/netupdate2.hjx;start=netupdate2.HsLoginPage.run">UCAS web-link</a>.</p>
   </div>
 
   <dl class="aligned add-top-margin add-double-bottom-margin">
