Fix contact link in preview

--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -102,7 +102,7 @@
           <li><a href="#section-entry">Requirements</a></li>
           <li><a href="#section-about-provider">About the training provider</a></li>
           <li><a href="#section-access-needs">Training with disabilities and other needs</a></li>
-          <li><a href="#section-provider">Contact details</a></li>
+          <li><a href="#section-contact">Contact details</a></li>
           <li><a href="#section-apply">Apply</a></li>
         </ul>
 
