Accredited not accrediting

--- a/app/views/about-your-organisation.html
+++ b/app/views/about-your-organisation.html
@@ -73,14 +73,14 @@
       <div class="column-two-thirds">
         {% if data['accreditors'].length > 1 %}
           <h2 class="heading-large">
-            About your accrediting providers
+            About your accredited providers
           </h2>
-          <p>Describe advantages and special features of each accrediting provider. You must be specific and factual with any claims you make, and support them with evidence.</p>
+          <p>Describe advantages and special features of each accredited provider. You must be specific and factual with any claims you make, and support them with evidence.</p>
         {% else %}
           <h2 class="heading-large">
-            About your accrediting provider
+            About your accredited provider
           </h2>
-          <p>Describe advantages and special features of your accrediting provider. You must be specific and factual with any claims you make, and support them with evidence.</p>
+          <p>Describe advantages and special features of your accredited provider. You must be specific and factual with any claims you make, and support them with evidence.</p>
         {% endif %}
 
         {% for a in data['accreditors'] %}
