--- a/app/views/course.html
+++ b/app/views/course.html
@@ -78,7 +78,7 @@
               <dd>{{ course.providerCode }}</dd>
               <dt>Training programme code:</dt>
               <dd>{{ course.programmeCode }}</dd>
-              <dt>Accrediting provider:</dt>
+              <dt>Accredited provider:</dt>
               <dd>{{ course.accrediting }}</dd>
               <dt>Route:</dt>
               <dd>{{ course.route }}</dd>
