--- a/app/views/course/from-ucas.html
+++ b/app/views/course/from-ucas.html
@@ -30,7 +30,7 @@
     <dd>{{ ucasCourse.providerCode }}</dd>
     <dt>Training programme code:</dt>
     <dd>{{ ucasCourse.programmeCode }}</dd>
-    <dt>Accrediting provider:</dt>
+    <dt>Accredited provider:</dt>
     <dd>{{ ucasCourse.accrediting }}</dd>
     <dt>Route:</dt>
     <dd>{{ ucasCourse.route }}</dd>
