--- a/app/views/course/about-this-option.html
+++ b/app/views/course/about-this-option.html
@@ -54,7 +54,7 @@
           <li>how much time they’ll spend training in school</li>
           <li>how they’ll be assessed</li>
           <li>the workload (eg how many essays per term?)</li>
-          <li>any other locations they’ll need to go to (eg will they also have to attend classes at an accrediting provider?)</li>
+          <li>any other locations they’ll need to go to (eg will they also have to attend classes at an accredited provider?)</li>
           <li>information about the prestige of the course (eg league-table rankings)</li>
         </ul>
 
