Accredited not accrediting

--- a/app/views/history/needs-behind-fields.html
+++ b/app/views/history/needs-behind-fields.html
@@ -95,17 +95,17 @@
 
       <p>Information about a provider will help applicants to differentiate courses when their location and financial needs are otherwise met.</p>
 
-      <h3 class="heading-medium">About your accrediting provider (optional)</h3>
+      <h3 class="heading-medium">About your accredited provider (optional)</h3>
 
-      <p>Or the QTS awarding body. Training providers have different relationships with their accrediting providers. They can have 0, 1 or many accrediting providers.</p>
+      <p>Or the QTS awarding body. Training providers have different relationships with their accredited providers. They can have 0, 1 or many accredited providers.</p>
 
-      <p>Like the training provider, the accrediting provider can be a differentiator. Some applicants will choose a course based on the prestige of the organisation awarding the qualification.</p>
+      <p>Like the training provider, the accredited provider can be a differentiator. Some applicants will choose a course based on the prestige of the organisation awarding the qualification.</p>
 
-      <p>The term ‘accrediting provider’ is contentious - the department and training providers have different views on which term is appropriate.</p>
+      <p>The term ‘accrediting provider’, as used by UCAS, is contentious - the department and training providers have different views on which term is appropriate.</p>
 
-      <p>If a training provider offers the same course through different accrediting providers, applicants need to be able to choose between them.</p>
+      <p>If a training provider offers the same course through different accredited providers, applicants need to be able to choose between them.</p>
 
-      <h3 class="heading-medium">Training with a disability</h3>
+      <h3 class="heading-medium">Training with disabilities and other needs</h3>
 
       <p>Applicants with access needs need to know how a provider can accommodate those needs. We prompt providers to consider the range of needs and to give examples of how they’ve helped students in the past.</p>
     </div>
