Don't run title too long

--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -11,9 +11,13 @@
     </ol>
   </div>
 
-  <h1 class="heading-xlarge">{{ data['training-provider-name'] }}</h1>
+  <div class="grid-row">
+    <div class="column-two-thirds">
+      <h1 class="heading-xlarge">{{ data['training-provider-name'] }}</h1>
+    </div>
+  </div>
 
-  <h2 class="heading-large">About your organisation</h2>
+  <h2 class="heading-large remove-top-margin">About your organisation</h2>
   <div class="grid-row">
     <div class="column-two-thirds">
       <dl class="course-part-tasks remove-top-margin">
