Add formatting guidance to course pages

--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -74,6 +74,9 @@
     <div class="js-cant-copy" style="display: none">
       <p>When you’ve added content to this page, you can copy it to other courses</p>
     </div>
+    <hr />
+
+    {{ formatting() }}
   </div>
 </form>
 {% endmacro %}
