Accredited not accrediting

--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -44,7 +44,7 @@
   {% for accrediting in data['accreditors'] %}
     {% if data['accreditors'][0]['name'] != data['training-provider-name'] %}
       <h3 class="heading-medium">
-        <span style="color: #777; font-weight: normal">Accrediting provider</span><br />
+        <span style="color: #777; font-weight: normal">Accredited provider</span><br />
         {{ accrediting.name }}
       </h3>
     {% endif %}
