--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -20,7 +20,7 @@
   <h2 class="heading-large remove-top-margin">About your organisation</h2>
   <div class="grid-row">
     <div class="column-two-thirds">
-      <p>Your organisation information and contact details display on every course. They are edited and published separately to course information.</p>
+      <p>Your organisation information and contact details will show on every course. They are edited and published separately from course information.</p>
       <p>
         {% if data['about-your-organisation-publish-state'] == 'draft' %}
           <span class="phase-tag phase-tag-small phase-tag-draft">Draft</span>
