--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">August 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/user-research-aug-22">User research - 22 August</a>
+      </h3>
+      <p>
+        Testing markdown, SimpleMDE and publishing workflow
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/who-did-what-when">Who did what and when</a>
       </h3>
       <p>
