Add workflow states screenshot

--- a/app/views/history/user-research-aug-22/index.html
+++ b/app/views/history/user-research-aug-22/index.html
@@ -17,7 +17,8 @@
     { text: 'Course', id: 'course' },
     { text: 'Preview', id: 'preview' },
     { text: 'About your organisation', id: 'about-your-organisation' },
-    { text: 'Course length and fees', id: 'course-length-and-fees' }
+    { text: 'Course length and fees', id: 'course-length-and-fees' },
+    { text: 'Workflow states', id: 'workflow-states' }
   ] %}
   {{ macros.screenshotContents(contents) }}
 
@@ -30,6 +31,8 @@
   {{ macros.screenshot('About your organisation', 'about-your-organisation', '/public/images/history/user-research-aug-22/thumbnails/04-about-your-organisation.png', '/public/images/history/user-research-aug-22/04-about-your-organisation.png', '') }}
 
   {{ macros.screenshot('Course length and fees', 'course-length-and-fees', '/public/images/history/user-research-aug-22/thumbnails/05-course-length-and-fees.png', '/public/images/history/user-research-aug-22/05-course-length-and-fees.png', '') }}
+
+  {{ macros.screenshot('Workflow states', 'workflow-states', '/public/images/history/user-research-aug-22/thumbnails/01-workflow-states.png', '/public/images/history/user-research-aug-22/01-workflow-states.png', '') }}
 
 </main>
 {% endblock %}
