--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -139,7 +139,7 @@
   {% endif %}
 
   {% if state == 'published' %}
-    <span class="phase-tag phase-tag-published add-bottom-margin">Draft</span>
+    <span class="phase-tag phase-tag-published add-bottom-margin">Published</span>
   {% endif %}
 
   {% if publishedBefore or state == 'published' %}
