--- a/app/views/about-your-organisation/edit.html
+++ b/app/views/about-your-organisation/edit.html
@@ -7,6 +7,8 @@
   {% include "includes/phase_banner_beta.html" %}
 <a href="/about-your-organisation" class="link-back">Back</a>
 
+{% include "about-your-organisation/_errors.html" %}
+
 <h1 class="heading-xlarge">
   {{ title }}
 </h1>
