Tweak contact details help text

--- a/app/views/about-your-organisation/contact.html
+++ b/app/views/about-your-organisation/contact.html
@@ -17,9 +17,9 @@
   <form action="/about-your-organisation" method="post">
     <div class="grid-row">
       <div class="column-two-thirds">
-        {{ macros.textbox('email-address', 'Email address', 'Applicants will use this email address to ask about your courses', 'form-control', null, errors) }}
-        {{ macros.textbox('telephone-number', 'Telephone number', 'Applicants will use this number to call you about your courses', 'form-control', null, errors) }}
-        {{ macros.textbox('website', 'Website', 'The website applicants should visit for more information about your courses', 'form-control-full', null, errors) }}
+        {{ macros.textbox('email-address', 'Email address', 'Give an email address that applicants can use to contact you', 'form-control', null, errors) }}
+        {{ macros.textbox('telephone-number', 'Telephone number', 'Give a telephone number that applicants can use to call you', 'form-control', null, errors) }}
+        {{ macros.textbox('website', 'Website', 'Add a link to the initial teacher training or course pages of your website', 'form-control-full', null, errors) }}
       </div>
     </div>
 
